--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
             console.error('Push notifications are not supported in this browser.');
         }
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
